@@ -6,276 +6,296 @@ package org.fcrepo.server.security;
 
 import java.net.URI;
 import java.net.URISyntaxException;
-
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Iterator;
+import java.util.Map;
 import java.util.Set;
 
-import com.sun.xacml.EvaluationCtx;
-import com.sun.xacml.attr.AttributeValue;
-import com.sun.xacml.attr.BagAttribute;
-import com.sun.xacml.attr.DateAttribute;
-import com.sun.xacml.attr.DateTimeAttribute;
-import com.sun.xacml.attr.IntegerAttribute;
-import com.sun.xacml.attr.StringAttribute;
-import com.sun.xacml.attr.TimeAttribute;
-import com.sun.xacml.cond.EvaluationResult;
-import com.sun.xacml.ctx.Status;
-
+import org.fcrepo.common.policy.XacmlName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import org.jboss.security.xacml.sunxacml.EvaluationCtx;
+import org.jboss.security.xacml.sunxacml.attr.AttributeValue;
+import org.jboss.security.xacml.sunxacml.attr.BagAttribute;
+import org.jboss.security.xacml.sunxacml.attr.DateAttribute;
+import org.jboss.security.xacml.sunxacml.attr.DateTimeAttribute;
+import org.jboss.security.xacml.sunxacml.attr.IntegerAttribute;
+import org.jboss.security.xacml.sunxacml.attr.StringAttribute;
+import org.jboss.security.xacml.sunxacml.attr.TimeAttribute;
+import org.jboss.security.xacml.sunxacml.cond.EvaluationResult;
+import org.jboss.security.xacml.sunxacml.ctx.Status;
 
 /**
  * @author Bill Niebel
  */
 public abstract class AttributeFinderModule
-        extends com.sun.xacml.finder.AttributeFinderModule {
+        extends org.jboss.security.xacml.sunxacml.finder.AttributeFinderModule {
 
     private static final Logger logger =
             LoggerFactory.getLogger(AttributeFinderModule.class);
+    
+    protected static final String[] EMPTY_STRING_ARRAY = new String[0];
+    
+    protected static final Map<URI, EvaluationResult> EMPTY_RESULTS =
+            new HashMap<URI, EvaluationResult>(3);
+    
+    private static EvaluationResult getEmptyResult(URI attributeType) {
+        EvaluationResult empty = EMPTY_RESULTS.get(attributeType);
+        if (empty == null) {
+            empty = new EvaluationResult(BagAttribute
+                    .createEmptyBag(attributeType));
+            EMPTY_RESULTS.put(attributeType, empty);
+        }
+        return empty;
+    }
 
     protected AttributeFinderModule() {
 
-        URI temp;
-
-        try {
-            temp = new URI(StringAttribute.identifier);
-        } catch (URISyntaxException e1) {
-            temp = null;
-            // TODO Auto-generated catch block
-            e1.printStackTrace();
-        }
-        STRING_ATTRIBUTE_URI = temp;
     }
 
     private Boolean instantiatedOk = null;
+    
+    private String iAmCache = null;
 
     public final void setInstantiatedOk(boolean value) {
-        logger.debug("setInstantiatedOk() " + value);
+        logger.debug("setInstantiatedOk() {}", value);
         if (instantiatedOk == null) {
-            instantiatedOk = new Boolean(value);
+            instantiatedOk = Boolean.valueOf(value);
         }
     }
 
     @Override
     public boolean isDesignatorSupported() {
-        logger.debug("isDesignatorSupported() will return " + iAm() + " "
-                + (instantiatedOk != null && instantiatedOk.booleanValue()));
-        return instantiatedOk != null && instantiatedOk.booleanValue();
+        logger.debug("isDesignatorSupported() will return {} {}",
+                iAm(), (instantiatedOk == Boolean.TRUE));
+        return instantiatedOk == Boolean.TRUE;
     }
 
     private final boolean parmsOk(URI attributeType,
                                   URI attributeId,
                                   int designatorType) {
-        logger.debug("in parmsOk " + iAm());
+        logger.debug("in parmsOk {}", iAm());
         if (!getSupportedDesignatorTypes()
-                .contains(new Integer(designatorType))) {
-            logger.debug("AttributeFinder:parmsOk" + iAm() + " exit on "
-                    + "target not supported");
+                .contains(Integer.valueOf(designatorType))) {
+            logger.debug("AttributeFinder:parmsOk{} exit on target not supported [{}]",
+                    iAm(), designatorType);
             return false;
         }
 
         if (attributeType == null) {
-            logger.debug("AttributeFinder:parmsOk" + iAm() + " exit on "
-                    + "null attributeType");
+            logger.debug("AttributeFinder:parmsOk{} exit on null attributeType",
+                    iAm());
             return false;
         }
 
         if (attributeId == null) {
-            logger.debug("AttributeFinder:parmsOk" + iAm() + " exit on "
-                    + "null attributeId");
+            logger.debug("AttributeFinder:parmsOk{} exit on null attributeId",
+                    iAm());
             return false;
         }
 
-        logger.debug("AttributeFinder:parmsOk" + iAm() + " looking for "
-                + attributeId.toString());
+        logger.debug("AttributeFinder:parmsOk{} looking for {}",
+                iAm(), attributeId);
         showRegisteredAttributes();
 
-        if (hasAttribute(attributeId.toString())) {
-            if (!getAttributeType(attributeId.toString()).equals(attributeType
-                    .toString())) {
-                logger.debug("AttributeFinder:parmsOk" + iAm() + " exit on "
-                        + "attributeType incorrect for attributeId");
+        if (hasAttribute(attributeId)) {
+            if (!getAttributeType(attributeId).equals(attributeType)) {
+                logger.debug("AttributeFinder:parmsOk{} exit on attributeType incorrect for attributeId",
+                        iAm());
                 return false;
             }
         } else {
-            if (!StringAttribute.identifier.equals(attributeType.toString())) {
-                logger.debug("AttributeFinder:parmsOk" + iAm() + " exit on "
-                        + "attributeType incorrect for attributeId");
+            if (!STRING_ATTRIBUTE_TYPE_URI.equals(attributeType)) {
+                logger.debug("AttributeFinder:parmsOk{} exit on attributeType incorrect for attributeId",
+                        iAm());
                 return false;
             }
         }
-        logger.debug("exiting parmsOk normally " + iAm());
+        logger.debug("exiting parmsOk normally {}", iAm());
         return true;
     }
 
     protected String iAm() {
-        return this.getClass().getName();
+        if (iAmCache == null) {
+            iAmCache = this.getClass().getName();
+        }
+        return iAmCache;
     }
 
-    protected final Object getAttributeFromEvaluationResult(EvaluationResult attribute /*
-     * URI
-     * type,
-     * URI
-     * id,
-     * URI
-     * category,
-     * EvaluationCtx
-     * context
-     */) {
+    protected final Object getAttributeFromEvaluationResult(EvaluationResult attribute) {
         if (attribute.indeterminate()) {
-            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx" + iAm()
-                    + " exit on "
-                    + "couldn't get resource attribute from xacml request "
-                    + "indeterminate");
+            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx{} exit on couldn't get resource attribute from xacml request indeterminate",
+                    iAm());
             return null;
         }
 
         if (attribute.getStatus() != null
                 && !Status.STATUS_OK.equals(attribute.getStatus())) {
-            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx" + iAm()
-                    + " exit on "
-                    + "couldn't get resource attribute from xacml request "
-                    + "bad status");
+            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx{} exit on couldn't get resource attribute from xacml request bad status",
+                    iAm());
             return null;
         } // (resourceAttribute.getStatus() == null) == everything is ok
 
         AttributeValue attributeValue = attribute.getAttributeValue();
         if (!(attributeValue instanceof BagAttribute)) {
-            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx" + iAm()
-                    + " exit on "
-                    + "couldn't get resource attribute from xacml request "
-                    + "no bag");
+            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx{} exit on couldn't get resource attribute from xacml request no bag",
+                    iAm());
             return null;
         }
 
         BagAttribute bag = (BagAttribute) attributeValue;
         if (1 != bag.size()) {
-            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx" + iAm()
-                    + " exit on "
-                    + "couldn't get resource attribute from xacml request "
-                    + "wrong bag n=" + bag.size());
+            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx{} exit on couldn't get resource attribute from xacml request wrong bag n={}",
+                    iAm(), bag.size());
             return null;
         }
 
-        Iterator it = bag.iterator();
+        Iterator<?> it = bag.iterator();
         Object element = it.next();
 
         if (element == null) {
-            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx" + iAm()
-                    + " exit on "
-                    + "couldn't get resource attribute from xacml request "
-                    + "null returned");
-            return null;
-        }
-
-        if (it.hasNext()) {
-            logger.debug("AttributeFinder:getAttributeFromEvaluationCtx" + iAm()
-                    + " exit on "
-                    + "couldn't get resource attribute from xacml request "
-                    + "too many returned");
-            logger.debug(element.toString());
-            while (it.hasNext()) {
-                logger.debug(it.next().toString());
+            if (logger.isDebugEnabled()) {
+                logger.debug("AttributeFinder:getAttributeFromEvaluationCtx{} exit on couldn't get resource attribute from xacml request null returned", iAm());
             }
             return null;
         }
 
-        logger.debug("AttributeFinder:getAttributeFromEvaluationCtx " + iAm()
-                + " returning " + element.toString());
+        if (it.hasNext()) {
+            if (logger.isDebugEnabled()) {
+                logger.debug("AttributeFinder:getAttributeFromEvaluationCtx{} exit on couldn't get resource attribute from xacml request too many returned",
+                    iAm());
+                logger.debug(element.toString());
+                while (it.hasNext()) {
+                    logger.debug(it.next().toString());
+                }
+            }
+            return null;
+        }
+
+        logger.debug("AttributeFinder:getAttributeFromEvaluationCtx {} returning {}",
+                iAm(), element.toString());
         return element;
     }
 
-    protected final HashSet attributesDenied = new HashSet();
+    protected final HashSet<URI> attributesDenied = new HashSet<URI>();
 
-    private final Hashtable<String, URI> attributeIdUris =
-            new Hashtable<String, URI>();
+    private final HashSet<URI> attributeIdUris =
+            new HashSet<URI>();
 
-    private final Hashtable<String, String> attributeTypes =
-            new Hashtable<String, String>();
+    private final Hashtable<URI, URI> attributeTypes =
+            new Hashtable<URI, URI>();
 
-    private final Hashtable<String, URI> attributeTypeUris =
-            new Hashtable<String, URI>();
-
+    @Deprecated
     protected final void registerAttribute(String id, String type)
             throws URISyntaxException {
-        logger.debug("registering attribute " + iAm() + " " + id);
-        attributeIdUris.put(id, new URI(id));
-        attributeTypeUris.put(id, new URI(type));
+        logger.debug("registering attribute {} {}", iAm(), id);
+        URI idUri = new URI(id);
+        URI typeUri = new URI(type);
+        attributeIdUris.add(idUri);
+        attributeTypes.put(idUri, typeUri);
+    }
+
+    protected final void registerAttribute(URI id, URI type)
+            throws URISyntaxException {
+        logger.debug("registering attribute {} {}", iAm(), id);
+        attributeIdUris.add(id);
         attributeTypes.put(id, type);
     }
-
-    protected final URI getAttributeIdUri(String id) {
-        return attributeIdUris.get(id);
+    
+    protected final void registerAttribute(XacmlName attribute) {
+        logger.debug("registering attribute {} {}", iAm(), attribute.uri);
+        attributeIdUris.add(attribute.attributeId);
+        attributeTypes.put(attribute.attributeId, attribute.datatype);
+    }
+    
+    protected final void denyAttribute(URI id) {
+        logger.debug("Denying attribute {} {}", iAm(), id);
+        attributesDenied.add(id);
     }
 
+    @Deprecated
+    protected final URI getAttributeIdUri(String id) {
+        URI test = URI.create(id);
+        return (attributeIdUris.contains(test)) ? test : null;
+    }
+
+    @Deprecated
     protected final boolean hasAttribute(String id) {
-        return attributeIdUris.containsKey(id);
+        return attributeIdUris.contains(URI.create(id));
+    }
+
+    protected final boolean hasAttribute(URI id) {
+        return attributeIdUris.contains(id);
     }
 
     private final void showRegisteredAttributes() {
-        Iterator it = attributeIdUris.keySet().iterator();
+        if (!logger.isDebugEnabled()) return;
+        Iterator<URI> it = attributeIdUris.iterator();
         while (it.hasNext()) {
-            String key = (String) it.next();
-            logger.debug("another registered attribute  = " + iAm() + " " + key);
+            String key = it.next().toString();
+            logger.debug("another registered attribute  = {} {}", iAm(), key);
         }
     }
 
+    @Deprecated
     protected final String getAttributeType(String id) {
-        return attributeTypes.get(id);
+        return getAttributeTypeUri(id).toString();
     }
 
     protected final URI getAttributeTypeUri(String id) {
-        return attributeTypeUris.get(id);
+        return getAttributeType(URI.create(id));
     }
 
-    private static final Set NULLSET = new HashSet();
+    protected final URI getAttributeType(URI id) {
+        return attributeTypes.get(id);
+    }
 
     private final Set<Integer> supportedDesignatorTypes =
             new HashSet<Integer>();
 
     protected final void registerSupportedDesignatorType(int designatorType) {
-        logger.debug("registerSupportedDesignatorType() " + iAm());
+        logger.debug("registerSupportedDesignatorType() {}", iAm());
         supportedDesignatorTypes.add(designatorType);
     }
 
     @Override
+    @SuppressWarnings("rawtypes")
     public Set getSupportedDesignatorTypes() {
         if (instantiatedOk != null && instantiatedOk.booleanValue()) {
-            logger.debug("getSupportedDesignatorTypes() will return " + iAm()
-                    + " set of elements, n=" + supportedDesignatorTypes.size());
+            logger.debug("getSupportedDesignatorTypes() will return {} set of elements, n={}",
+                    iAm(), supportedDesignatorTypes.size());
             return supportedDesignatorTypes;
         }
-        logger.debug("getSupportedDesignatorTypes() will return " + iAm()
-                + "NULLSET");
-        return NULLSET;
+        logger.debug("getSupportedDesignatorTypes() will return {}NULLSET", iAm());
+        return Collections.emptySet();
     }
 
     protected abstract boolean canHandleAdhoc();
 
     private final boolean willService(URI attributeId) {
-        String temp = attributeId.toString();
-        if (hasAttribute(temp)) {
-            logger.debug("willService() " + iAm()
-                    + " accept this known serviced attribute "
-                    + attributeId.toString());
+        if (hasAttribute(attributeId)) {
+            logger.debug("willService() {} accept this known serviced attribute {}",
+                    iAm(), attributeId);
             return true;
         }
         if (!canHandleAdhoc()) {
-            logger.debug("willService() " + iAm() + " deny any adhoc attribute "
-                    + attributeId.toString());
+            logger.debug("willService() {} deny any adhoc attribute {}",
+                    iAm(), attributeId);
             return false;
         }
-        if (attributesDenied.contains(temp)) {
-            logger.debug("willService() " + iAm()
-                    + " deny this known adhoc attribute "
-                    + attributeId.toString());
+        if (attributesDenied.contains(attributeId)) {
+            logger.debug("willService() {} deny this known adhoc attribute {}",
+                    iAm(), attributeId);
             return false;
         }
-        logger.debug("willService() " + iAm()
-                + " allow this unknown adhoc attribute "
-                + attributeId.toString());
+        logger.debug("willService() {} allow this unknown adhoc attribute {}",
+                iAm(), attributeId);
         return true;
     }
 
@@ -286,158 +306,139 @@ public abstract class AttributeFinderModule
                                           URI category,
                                           EvaluationCtx context,
                                           int designatorType) {
-        logger.debug("AttributeFinder:findAttribute " + iAm());
-        logger.debug("attributeType=[" + attributeType + "], attributeId=["
-                + attributeId + "]" + iAm());
+        logger.debug("AttributeFinder:findAttribute {}", iAm());
+        logger.debug("attributeType=[{}], attributeId=[{}] {}", attributeType, attributeId, iAm());
 
         if (!parmsOk(attributeType, attributeId, designatorType)) {
-            logger.debug("AttributeFinder:findAttribute" + " exit on "
-                    + "parms not ok" + iAm());
+            logger.debug("AttributeFinder:findAttribute exit on parms not ok {}", iAm());
             if (attributeType == null) {
-                try {
-                    attributeType = new URI(StringAttribute.identifier);
-                } catch (URISyntaxException e) {
-                    //we tried
-                }
+                attributeType = STRING_ATTRIBUTE_TYPE_URI;
             }
-            return new EvaluationResult(BagAttribute
-                    .createEmptyBag(attributeType));
+            return getEmptyResult(attributeType);
         }
 
         if (!willService(attributeId)) {
-            logger.debug("AttributeFinder:willService() " + iAm()
-                    + " returns false" + iAm());
-            return new EvaluationResult(BagAttribute
-                    .createEmptyBag(attributeType));
+            logger.debug("AttributeFinder:willService() {} returns false", iAm());
+            return getEmptyResult(attributeType);
         }
 
         if (category != null) {
-            logger.debug("++++++++++ AttributeFinder:findAttribute " + iAm()
-                    + " category=" + category.toString());
+            logger.debug("++++++++++ AttributeFinder:findAttribute {} category={}", iAm(), category.toString());
         }
-        logger.debug("++++++++++ AttributeFinder:findAttribute " + iAm()
-                + " designatorType=" + designatorType);
+        logger.debug("++++++++++ AttributeFinder:findAttribute {} designatorType={}", iAm(), designatorType);
 
-        logger.debug("about to get temp " + iAm());
+        logger.debug("about to get temp {}", iAm());
         Object temp =
                 getAttributeLocally(designatorType,
-                                    attributeId.toASCIIString(),
+                                    attributeId,
                                     category,
                                     context);
-        logger.debug(iAm() + " got temp=" + temp);
+        logger.debug("{} got temp={}", iAm(), temp);
 
         if (temp == null) {
-            logger.debug("AttributeFinder:findAttribute" + " exit on "
-                    + "attribute value not found" + iAm());
-            return new EvaluationResult(BagAttribute
-                    .createEmptyBag(attributeType));
+            logger.debug("AttributeFinder:findAttribute{} exit on "
+                    + "attribute value not found", iAm());
+            return getEmptyResult(attributeType);
         }
 
-        Set<AttributeValue> set = new HashSet<AttributeValue>();
+        Collection<AttributeValue> set = null;
         if (temp instanceof String) {
-            logger.debug("AttributeFinder:findAttribute" + " will return a "
-                    + "String " + iAm());
-            if (attributeType.toString().equals(StringAttribute.identifier)) {
-                set.add(new StringAttribute((String) temp));
-            } else if (attributeType.toString()
-                    .equals(DateTimeAttribute.identifier)) {
-                DateTimeAttribute tempDateTimeAttribute;
+            AttributeValue att = null;
+            logger.debug("AttributeFinder:findAttribute will return a String {}", iAm());
+            if (attributeType.equals(STRING_ATTRIBUTE_TYPE_URI)) {
+                att = StringAttribute.getInstance((String) temp);
+            } else if (attributeType.equals(DATETIME_ATTRIBUTE_TYPE_URI)) {
                 try {
-                    tempDateTimeAttribute =
-                            DateTimeAttribute.getInstance((String) temp);
-                    set.add(tempDateTimeAttribute);
+                    att = DateTimeAttribute.getInstance((String) temp);
                 } catch (Throwable t) {
                 }
-            } else if (attributeType.toString()
-                    .equals(DateAttribute.identifier)) {
-                DateAttribute tempDateAttribute;
+            } else if (attributeType.equals(DATE_ATTRIBUTE_TYPE_URI)) {
                 try {
-                    tempDateAttribute =
-                            DateAttribute.getInstance((String) temp);
-                    set.add(tempDateAttribute);
+                    att = DateAttribute.getInstance((String) temp);
                 } catch (Throwable t) {
                 }
-            } else if (attributeType.toString()
-                    .equals(TimeAttribute.identifier)) {
-                TimeAttribute tempTimeAttribute;
+            } else if (attributeType.equals(TIME_ATTRIBUTE_TYPE_URI)) {
                 try {
-                    tempTimeAttribute =
-                            TimeAttribute.getInstance((String) temp);
-                    set.add(tempTimeAttribute);
+                    att = TimeAttribute.getInstance((String) temp);
                 } catch (Throwable t) {
                 }
-            } else if (attributeType.toString()
-                    .equals(IntegerAttribute.identifier)) {
-                IntegerAttribute tempIntegerAttribute;
+            } else if (attributeType.equals(INTEGER_ATTRIBUTE_TYPE_URI)) {
                 try {
-                    tempIntegerAttribute =
-                            IntegerAttribute.getInstance((String) temp);
-                    set.add(tempIntegerAttribute);
+                    att = IntegerAttribute.getInstance((String) temp);
                 } catch (Throwable t) {
-                }
-            } //xacml fixup
-            //was set.add(new StringAttribute((String)temp));
-        } else if (temp instanceof String[]) {
-            logger.debug("AttributeFinder:findAttribute" + " will return a "
-                    + "String[] " + iAm());
-            for (int i = 0; i < ((String[]) temp).length; i++) {
-                if (((String[]) temp)[i] == null) {
-                    continue;
-                }
-                if (attributeType.toString().equals(StringAttribute.identifier)) {
-                    set.add(new StringAttribute(((String[]) temp)[i]));
-                } else if (attributeType.toString()
-                        .equals(DateTimeAttribute.identifier)) {
-                    logger.debug("USING AS DATETIME:" + ((String[]) temp)[i]);
-                    DateTimeAttribute tempDateTimeAttribute;
-                    try {
-                        tempDateTimeAttribute =
-                                DateTimeAttribute
-                                        .getInstance(((String[]) temp)[i]);
-                        set.add(tempDateTimeAttribute);
-                    } catch (Throwable t) {
-                    }
-                } else if (attributeType.toString()
-                        .equals(DateAttribute.identifier)) {
-                    logger.debug("USING AS DATE:" + ((String[]) temp)[i]);
-                    DateAttribute tempDateAttribute;
-                    try {
-                        tempDateAttribute =
-                                DateAttribute.getInstance(((String[]) temp)[i]);
-                        set.add(tempDateAttribute);
-                    } catch (Throwable t) {
-                    }
-                } else if (attributeType.toString()
-                        .equals(TimeAttribute.identifier)) {
-                    logger.debug("USING AS TIME:" + ((String[]) temp)[i]);
-                    TimeAttribute tempTimeAttribute;
-                    try {
-                        tempTimeAttribute =
-                                TimeAttribute.getInstance(((String[]) temp)[i]);
-                        set.add(tempTimeAttribute);
-                    } catch (Throwable t) {
-                    }
-                } else if (attributeType.toString()
-                        .equals(IntegerAttribute.identifier)) {
-                    logger.debug("USING AS INTEGER:" + ((String[]) temp)[i]);
-                    IntegerAttribute tempIntegerAttribute;
-                    try {
-                        tempIntegerAttribute =
-                                IntegerAttribute
-                                        .getInstance(((String[]) temp)[i]);
-                        set.add(tempIntegerAttribute);
-                    } catch (Throwable t) {
-                    }
                 }
             }
+            if (att != null) {
+                set = Collections.singleton(att);
+            }
+        } else if (temp instanceof String[]) {
+            String[] strings = (String[]) temp;
+            // Because the number of attributes tends to be small,
+            // we can minimize object creation by avoiding HashSets
+            // and sizing to the size of the value list
+            set = new ArrayList<AttributeValue>(strings.length);
+            logger.debug("AttributeFinder:findAttribute will return a String[] {}", iAm());
+            for (int i = 0; i < strings.length; i++) {
+                if (strings[i] == null) {
+                    continue;
+                }
+                AttributeValue tempAtt = null;
+                if (attributeType.equals(STRING_ATTRIBUTE_TYPE_URI)) {
+                    set.add(new StringAttribute(strings[i]));
+                } else if (attributeType.equals(DATETIME_ATTRIBUTE_TYPE_URI)) {
+                    logger.debug("USING AS DATETIME:{}", strings[i]);
+                    try {
+                        tempAtt =
+                                DateTimeAttribute
+                                        .getInstance(strings[i]);
+                    } catch (Throwable t) {
+                    }
+                } else if (attributeType.equals(DATE_ATTRIBUTE_TYPE_URI)) {
+                    logger.debug("USING AS DATE:{}", strings[i]);
+                    try {
+                        tempAtt =
+                                DateAttribute.getInstance(strings[i]);
+                    } catch (Throwable t) {
+                    }
+                } else if (attributeType.equals(TIME_ATTRIBUTE_TYPE_URI)) {
+                    logger.debug("USING AS TIME:{}", strings[i]);
+                    try {
+                        tempAtt =
+                                TimeAttribute.getInstance(strings[i]);
+                    } catch (Throwable t) {
+                    }
+                } else if (attributeType.equals(INTEGER_ATTRIBUTE_TYPE_URI)) {
+                    logger.debug("USING AS INTEGER: {}", strings[i]);
+                    try {
+                        tempAtt =
+                                IntegerAttribute
+                                        .getInstance(strings[i]);
+                    } catch (Throwable t) {
+                    }
+                }
+                if (tempAtt != null && !set.contains(tempAtt)) {
+                    set.add(tempAtt);
+                }
+            }
+        }
+        if (set == null || set.size() == 0) {
+            return getEmptyResult(attributeType);
         }
         return new EvaluationResult(new BagAttribute(attributeType, set));
     }
 
-    protected final URI STRING_ATTRIBUTE_URI;
+    protected static final URI DATE_ATTRIBUTE_TYPE_URI = URI.create(DateAttribute.identifier);
+
+    protected static final URI DATETIME_ATTRIBUTE_TYPE_URI = URI.create(DateTimeAttribute.identifier);
+
+    protected static final URI INTEGER_ATTRIBUTE_TYPE_URI = URI.create(IntegerAttribute.identifier);
+
+    protected static final URI STRING_ATTRIBUTE_TYPE_URI = URI.create(StringAttribute.identifier);
+
+    protected static final URI TIME_ATTRIBUTE_TYPE_URI = URI.create(TimeAttribute.identifier);
 
     abstract protected Object getAttributeLocally(int designatorType,
-                                                  String attributeId,
+                                                  URI attributeId,
                                                   URI resourceCategory,
                                                   EvaluationCtx context);
 
